Add spacing in cardContainer and log albums data in script.js

--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
         </div>
         <div class="spotifyPlaylists">
           <h1>Playlists</h1>
-          <div class="cardContainer"></div>
+          <div class="cardContainer">
+            
+          </div>
           <div id="plays" style="display: none;" class="playbar">
             <div class="seekbar">
               <div class="circle"></div>
