Add SEO and Open Graph meta tags to index.html
Added meta tags for SEO and social media sharing.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Add these meta tags inside the <head> section of your index.html -->
+
+<!-- Primary Meta Tags -->
+<meta name="title" content="MUZIX - Web Music Player | Mood-Based Playlists">
+<meta name="description" content="A modern, feature-rich web music player with mood-based playlists, dark/light themes, and full audio controls. Stream your music collection with style.">
+<meta name="keywords" content="music player, web audio player, HTML5 audio, mood playlists, JavaScript music player, responsive music app, dark mode music player, audio streaming, NCS music, online music player">
+<meta name="author" content="Your Name">
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://music-player-six-taupe.vercel.app/">
+<meta property="og:title" content="MUZIX - Web Music Player | Mood-Based Playlists">
+<meta property="og:description" content="A modern, feature-rich web music player with mood-based playlists, dark/light themes, and full audio controls.">
+<meta property="og:image" content="https://music-player-six-taupe.vercel.app/logo.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://music-player-six-taupe.vercel.app/">
+<meta property="twitter:title" content="MUZIX - Web Music Player | Mood-Based Playlists">
+<meta property="twitter:description" content="A modern, feature-rich web music player with mood-based playlists, dark/light themes, and full audio controls.">
+<meta property="twitter:image" content="https://music-player-six-taupe.vercel.app/logo.png">
+
+<!-- Theme Color -->
+<meta name="theme-color" content="#333333">
+<meta name="msapplication-TileColor" content="#333333">
+
+<!-- Apple Touch Icon -->
+<link rel="apple-touch-icon" href="logo.png">
+
+<!-- Manifest for PWA (optional) -->
+<link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/utility.css" />
     <title>MUZIX - Web Player: Music for everyone</title>
